[package]
name = "rwbt"
version = "0.1.1"
edition = "2021"
description = "RivieraWaves Bluetooth IP core: RFC command sequencer, register definitions, and calibration table packing"
categories = ["embedded", "no-std", "hardware-support"]
keywords = ["bluetooth", "rivierawaves", "rfc", "embedded"]
license = "Apache-2.0"
repository = "https://github.com/Ic-arbon/rwbt"

[features]
default = []
prebuild = []
## SiFli RF front-end register offsets, bit constants, and calibration table packing.
sifli = []
## Internal: enable the gen-sifli-regs binary tool.
_gen = []

[[bin]]
name = "gen-sifli-regs"
path = "src/bin/gen_sifli_regs.rs"
required-features = ["_gen"]
